Add styles for game

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,15 @@ body {
     transition: all 0.5s;
 }
 
+.btn--big::after {
+    content: attr(data-type);
+    font-size: 1rem;
+    color: #445361;
+    position: relative;
+    left: -0.5em;
+
+}
+
 .btn--blue {
     border-color: blue;
     color: blue;
@@ -167,7 +176,7 @@ body {
     background-color: #0d1013;
 }
 
-/* --------- Media queries */
+/* Media queries */
 
 @media (max-width: 414px) {
     .controls-area {
